--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "electron-is-dev": "^1.2.0",
-    "electron-json-storage": "^4.1.8",
     "esm": "^3.2.25",
-    "node-hue-api": "^4.0.6",
+    "lodash.throttle": "^4.1.1",
+    "node-hue-api": "^4.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
-    "electron": "cross-env NODE_ENV=dev nodemon --exec \"\"electron .\"\"",
+    "electron": "cross-env NODE_ENV=dev nodemon --exec \"\"electron --inspect=5858 .\"\"",
     "electron-dev": "concurrently \"cross-env BROWSER=none PORT=8080 npm run start\" \"wait-on http://localhost:8080 && npm run electron .\"",
     "start": "cross-env PORT=8080 BROWSER=none react-scripts start",
     "build": "react-scripts build",
@@ -57,6 +59,8 @@
     "electron-builder": "^22.7.0",
     "electron-reload": "^1.5.0",
     "nodemon": "^2.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "wait-on": "^5.0.0"
   }
 }
